more robust ssr, not works; not yet used in prod

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>WolcenDB</title>
 </head>
-<body>
+<body style="background: black">
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
